Updated en_us and de_de translations

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -17,6 +17,8 @@
 	"calamity.book.hover.notPlaying": "You will not play the next match",
 	"calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
 	"calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
+	"calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
+	"calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
 	"calamity.book.hover.start": "Start match after 15 seconds",
 	"calamity.book.leaveTeam": "Leave team",
 	"calamity.book.li.li": "  + ",
@@ -39,6 +41,7 @@
 	"calamity.book.toggleGamemode": "Game mode",
 	"calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
 	"calamity.click.here": "here",
+	"calamity.enchanted.item": "Enchanted Item",
 	"calamity.feature.notAvailable": "Not available",
 	"calamity.forfeit.draw": "It's a draw!",
 	"calamity.forfeit.retracted.stopped": "%s has retracted their forfeit vote. Voting stopped.",
@@ -60,6 +63,7 @@
 	"calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
 	"calamity.notReady": "Not ready",
 	"calamity.out.of.bounds": "Out of bounds!",
+	"calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
 	"calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
 	"calamity.points": "%s: +%s points",
 	"calamity.prestige.blueForfeit.blue": "You've kept your dignity",
@@ -96,9 +100,16 @@
 	"calamity.resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
 	"calamity.resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
 	"calamity.seekGlory": "Seek glory or fall to calamity!",
+	"calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
+	"calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
+	"calamity.shuffle.newTeam": "%s: %s",
+	"calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
+	"calamity.shuffle.playerShuffled.all": "%s shuffled all players",
+	"calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
 	"calamity.sidelines": "%s moved to the sidelines",
 	"calamity.startMatch.countdown.lastFiveSeconds": "%s...",
 	"calamity.startMatch.countdown": "Match \u25b6 begins in %s seconds",
+	"calamity.subtitle.announcer": "Announcer speaks",
 	"calamity.subtitle.eye.release": "Eye opened",
 	"calamity.subtitle.eye.squish": "Eye squished",
 	"calamity.team.notReady.blue": "%s %s needs a moment %s",
@@ -122,16 +133,5 @@
 	"team.blue": "Blue",
 	"team.red": "Red",
 	"team.spectator": "Spectator",
-	"translator.name": "Moesh",
-	"calamity.enchanted.item":"Enchanted Item",
-	"calamity.select.respawnItem":"Select your respawn item by using one of these tools.",
-	"calamity.shuffle.error.noAvailablePlayers":"No players are available to be shuffled.",
-	"calamity.book.hover.shuffle.restOfPlayers":"Shuffle players who are not on a team",
-	"calamity.book.hover.shuffle.allPlayers":"Shuffle all players, except spectators",
-	"calamity.shuffle.newTeamAdditions":"Shuffled to %s: %s",
-	"calamity.shuffle.newTeam":"%s: %s",
-	"calamity.shuffle.playerShuffled.rest":"%s shuffled players who were not on a team",
-	"calamity.shuffle.playerShuffled.all":"%s shuffled all players",
-	"calamity.player.sessionID.mismatch":"SessionID mismatch. You will be processed as a new player.",
-	"calamity.subtitle.announcer":"Announcer speaks"
+	"translator.name": "Moesh"
 }
