Renamed resource points to generators

--- a/resourcepacks/calamity/assets/calamity/lang/de_de.json
+++ b/resourcepacks/calamity/assets/calamity/lang/de_de.json
@@ -74,27 +74,27 @@
     "calamity.resetItems.haventChosen":"Du hast noch kein Item ausgew\u00e4hlt, also kann es nicht zur\u00fcckgesetzt werden.",
     "calamity.resetItems":"Wenn du das n\u00e4chste mal respawnst, kannst du ein neues Item ausw\u00e4hlen.",
     "calamity.resetting":"Wird in den Standardzustand zur\u00fcckgesetzt",
-    "calamity.resourcePoint.enchantedItem.announced":"Ein %s wurde von %s %s erstellt!",
-    "calamity.resourcePoint.enchantedItem.invalid":"Kein g\u00fcltiges Item in der Haupthand gefunden. Nimm ein %s.",
-    "calamity.resourcePoint.enchantedItem.valid":"G\u00fcltiges Item gefunden! %s gegeben.",
-    "calamity.resourcePoint.output.attackedEffect":"[%s%3$s] f\u00fcr %s Sekunden gegeben",
-    "calamity.resourcePoint.output.attackEffect":"[%s%3$s] f\u00fcr %s an die Gegner geschickt",
-    "calamity.resourcePoint.output.effect.level2":" II",
-    "calamity.resourcePoint.output.effect":"[%s%3$s] f\u00fcr %s Sekunden erhalten",
-    "calamity.resourcePoint.output.item":"[%s] * %s erhalten",
-    "calamity.resourcePoint.sign.activated":"Aktiviert!",
-    "calamity.resourcePoint.sign.attack":"%ss f\u00fcr Gegner",
-    "calamity.resourcePoint.sign.enchant":"F\u00fcr die Haupthand",
-    "calamity.resourcePoint.sign.perPlayer":"%s pro Spieler",
-    "calamity.resourcePoint.sign.perTeam":"%ss f\u00fcr Team",
-    "calamity.resourcePoint.sign.progress":"L\u00e4dt: %s%%",
-    "calamity.resourcePoint.sign.ready":"Bereit",
-    "calamity.resourcePoint.sign.resetting":"Resettet: %s%%",
-    "calamity.resourcePoint.sign.type":"[%s%s]",
-    "calamity.resourcePoint.statusMessage.chargeSecond":"L\u00e4dt: %s Sekunde \u00fcbrig",
-    "calamity.resourcePoint.statusMessage.chargeSeconds":"L\u00e4dt: %s Sekunden \u00fcbrig",
-    "calamity.resourcePoint.statusMessage.resettingSecond":"Resettet: %ss \u00fcbrig",
-    "calamity.resourcePoint.statusMessage.resettingSeconds":"Resettet: %ss \u00fcbrig",
+    "calamity.generator.enchantedItem.announced":"Ein %s wurde von %s %s erstellt!",
+    "calamity.generator.enchantedItem.invalid":"Kein g\u00fcltiges Item in der Haupthand gefunden. Nimm ein %s.",
+    "calamity.generator.enchantedItem.valid":"G\u00fcltiges Item gefunden! %s gegeben.",
+    "calamity.generator.output.attackedEffect":"[%s%3$s] f\u00fcr %s Sekunden gegeben",
+    "calamity.generator.output.attackEffect":"[%s%3$s] f\u00fcr %s an die Gegner geschickt",
+    "calamity.generator.output.effect.level2":" II",
+    "calamity.generator.output.effect":"[%s%3$s] f\u00fcr %s Sekunden erhalten",
+    "calamity.generator.output.item":"[%s] * %s erhalten",
+    "calamity.generator.sign.activated":"Aktiviert!",
+    "calamity.generator.sign.attack":"%ss f\u00fcr Gegner",
+    "calamity.generator.sign.enchant":"F\u00fcr die Haupthand",
+    "calamity.generator.sign.perPlayer":"%s pro Spieler",
+    "calamity.generator.sign.perTeam":"%ss f\u00fcr Team",
+    "calamity.generator.sign.progress":"L\u00e4dt: %s%%",
+    "calamity.generator.sign.ready":"Bereit",
+    "calamity.generator.sign.resetting":"Resettet: %s%%",
+    "calamity.generator.sign.type":"[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond":"L\u00e4dt: %s Sekunde \u00fcbrig",
+    "calamity.generator.statusMessage.chargeSeconds":"L\u00e4dt: %s Sekunden \u00fcbrig",
+    "calamity.generator.statusMessage.resettingSecond":"Resettet: %ss \u00fcbrig",
+    "calamity.generator.statusMessage.resettingSeconds":"Resettet: %ss \u00fcbrig",
     "calamity.seekGlory":"Suche den Ruhm oder st\u00fcrze ins Ungl\u00fcck!",
     "calamity.select.respawnItem":"W\u00e4hle dein Respawn-Item indem du eines dieser Werkzeuge benutzt.",
     "calamity.sidelines":"%s ist nun Zuschauer",
