--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -78,27 +78,27 @@
 	"calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
 	"calamity.resetItems": "You will get to select a new item the next time you respawn.",
 	"calamity.resetting": "Resetting to default state",
-	"calamity.resourcePoint.enchantedItem.announced": "An %s was created by %s %s!",
-	"calamity.resourcePoint.enchantedItem.invalid": "No valid item found in main hand. Have an %s.",
-	"calamity.resourcePoint.enchantedItem.valid": "Valid item found! %s given.",
-	"calamity.resourcePoint.output.attackedEffect": "Given [%s%3$s] for %s seconds",
-	"calamity.resourcePoint.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
-	"calamity.resourcePoint.output.effect.level2": " II",
-	"calamity.resourcePoint.output.effect": "Given [%s%3$s] for %s seconds",
-	"calamity.resourcePoint.output.item": "Given [%s] * %s",
-	"calamity.resourcePoint.sign.activated": "Activated!",
-	"calamity.resourcePoint.sign.attack": "%s sec. attack",
-	"calamity.resourcePoint.sign.enchant": "For main hand",
-	"calamity.resourcePoint.sign.perPlayer": "%s per player",
-	"calamity.resourcePoint.sign.perTeam": "%s sec. for team",
-	"calamity.resourcePoint.sign.progress": "Charging: %s%%",
-	"calamity.resourcePoint.sign.ready": "Ready",
-	"calamity.resourcePoint.sign.resetting": "Resetting: %s%%",
-	"calamity.resourcePoint.sign.type": "[%s%s]",
-	"calamity.resourcePoint.statusMessage.chargeSecond": "Charging: %s second left",
-	"calamity.resourcePoint.statusMessage.chargeSeconds": "Charging: %s seconds left",
-	"calamity.resourcePoint.statusMessage.resettingSecond": "Resetting: %s second left",
-	"calamity.resourcePoint.statusMessage.resettingSeconds": "Resetting: %s seconds left",
+	"calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
+	"calamity.generator.enchantedItem.invalid": "No valid item found in main hand. Have an %s.",
+	"calamity.generator.enchantedItem.valid": "Valid item found! %s given.",
+	"calamity.generator.output.attackedEffect": "Given [%s%3$s] for %s seconds",
+	"calamity.generator.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
+	"calamity.generator.output.effect.level2": " II",
+	"calamity.generator.output.effect": "Given [%s%3$s] for %s seconds",
+	"calamity.generator.output.item": "Given [%s] * %s",
+	"calamity.generator.sign.activated": "Activated!",
+	"calamity.generator.sign.attack": "%s sec. attack",
+	"calamity.generator.sign.enchant": "For main hand",
+	"calamity.generator.sign.perPlayer": "%s per player",
+	"calamity.generator.sign.perTeam": "%s sec. for team",
+	"calamity.generator.sign.progress": "Charging: %s%%",
+	"calamity.generator.sign.ready": "Ready",
+	"calamity.generator.sign.resetting": "Resetting: %s%%",
+	"calamity.generator.sign.type": "[%s%s]",
+	"calamity.generator.statusMessage.chargeSecond": "Charging: %s second left",
+	"calamity.generator.statusMessage.chargeSeconds": "Charging: %s seconds left",
+	"calamity.generator.statusMessage.resettingSecond": "Resetting: %s second left",
+	"calamity.generator.statusMessage.resettingSeconds": "Resetting: %s seconds left",
 	"calamity.seekGlory": "Seek glory or fall to calamity!",
 	"calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
 	"calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
