--- a/resourcepacks/calamity/assets/calamity/lang/es_es.json
+++ b/resourcepacks/calamity/assets/calamity/lang/es_es.json
@@ -63,22 +63,22 @@
     "calamity.resetItems.haventChosen": "Todav\u00eda no has escogido un objeto.",
     "calamity.resetItems": "Podr\u00e1s reelegir tu objeto la pr\u00f3xima vez que reaparezcas.",
     "calamity.resetting": "Restableciendo el mapa",
-    "calamity.resourcePoint.output.attackedEffect": "Hab\u00e9is recibido [%s%3$s] durante %s segundos",
-    "calamity.resourcePoint.output.attackEffect": "El enemigo ha recibido [%s%3$s] durante %s segundos",
-    "calamity.resourcePoint.output.effect": "Hab\u00e9is obtenido [%s%3$s] durante %s segundos",
-    "calamity.resourcePoint.output.item": "Has obtenido [%s] * %s",
-    "calamity.resourcePoint.sign.activated": "\u00a1Activado!",
-    "calamity.resourcePoint.sign.attack": "Ataque de %ss",
-    "calamity.resourcePoint.sign.enchant": "Mano principal",
-    "calamity.resourcePoint.sign.perPlayer": "%s por jugador",
-    "calamity.resourcePoint.sign.perTeam": "%ss por equipo",
-    "calamity.resourcePoint.sign.progress": "Cargando: %s%%",
-    "calamity.resourcePoint.sign.ready": "Listo",
-    "calamity.resourcePoint.sign.resetting": "Reiniciando: %s%%",
-    "calamity.resourcePoint.statusMessage.chargeSecond": "Cargando: %s segundo restante",
-    "calamity.resourcePoint.statusMessage.chargeSeconds": "Cargando: %s segundos restantes",
-    "calamity.resourcePoint.statusMessage.resettingSecond": "Reiniciando: %s segundo restante",
-    "calamity.resourcePoint.statusMessage.resettingSeconds": "Reiniciando: %s segundos restantes",
+    "calamity.generator.output.attackedEffect": "Hab\u00e9is recibido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.attackEffect": "El enemigo ha recibido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.effect": "Hab\u00e9is obtenido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.item": "Has obtenido [%s] * %s",
+    "calamity.generator.sign.activated": "\u00a1Activado!",
+    "calamity.generator.sign.attack": "Ataque de %ss",
+    "calamity.generator.sign.enchant": "Mano principal",
+    "calamity.generator.sign.perPlayer": "%s por jugador",
+    "calamity.generator.sign.perTeam": "%ss por equipo",
+    "calamity.generator.sign.progress": "Cargando: %s%%",
+    "calamity.generator.sign.ready": "Listo",
+    "calamity.generator.sign.resetting": "Reiniciando: %s%%",
+    "calamity.generator.statusMessage.chargeSecond": "Cargando: %s segundo restante",
+    "calamity.generator.statusMessage.chargeSeconds": "Cargando: %s segundos restantes",
+    "calamity.generator.statusMessage.resettingSecond": "Reiniciando: %s segundo restante",
+    "calamity.generator.statusMessage.resettingSeconds": "Reiniciando: %s segundos restantes",
     "calamity.seekGlory": "\u00a1Buscad gloria ante la calamidad!",
     "calamity.sidelines": "%s se ha ido al banquillo",
     "calamity.startMatch.oneSecond": "La partida \u25b6 empieza en %s segundo",
