--- a/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
+++ b/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
@@ -71,24 +71,24 @@
     "calamity.resetItems.haventChosen": "Tu n'as pas encore s\u00e9lectionn\u00e9 d'objet. Rien \u00e0 r\u00e9initialiser.",
     "calamity.resetItems": "Tu seras autoris\u00e9 \u00e0 choisir un nouvel objet par d\u00e9faut lors de ta prochaine r\u00e9apparition.",
     "calamity.resetting": "R\u00e9initialisation aux param\u00e8tres par d\u00e9faut",
-    "calamity.resourcePoint.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s seconds",
-    "calamity.resourcePoint.output.attackEffect": "Envoie de l'effet [%s%3$s] \u00e0 l'ennemi pendant %s seconds",
-    "calamity.resourcePoint.output.effect.level2": " II",
-    "calamity.resourcePoint.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
-    "calamity.resourcePoint.output.item": "Don de [%s] * %s",
-    "calamity.resourcePoint.sign.activated": "Activ\u00e9 !",
-    "calamity.resourcePoint.sign.attack": "%s sec. attaque",
-    "calamity.resourcePoint.sign.enchant": "Pour la main principale",
-    "calamity.resourcePoint.sign.perPlayer": "%s par joueur",
-    "calamity.resourcePoint.sign.perTeam": "%s sec. pour l'\u00e9quipe",
-    "calamity.resourcePoint.sign.progress": "Chargement: %s%%",
-    "calamity.resourcePoint.sign.ready": "Pr\u00eat",
-    "calamity.resourcePoint.sign.resetting": "R\u00e9initialisation: %s%%",
-    "calamity.resourcePoint.sign.type": "[%s%s]",
-    "calamity.resourcePoint.statusMessage.chargeSecond": "Chargement: %s seconde restante",
-    "calamity.resourcePoint.statusMessage.chargeSeconds": "Chargement: %s secondes restantes",
-    "calamity.resourcePoint.statusMessage.resettingSecond": "R\u00e9initialisation: %s seconde restante",
-    "calamity.resourcePoint.statusMessage.resettingSeconds": "R\u00e9initialisation: %s secondes restantes",
+    "calamity.generator.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s seconds",
+    "calamity.generator.output.attackEffect": "Envoie de l'effet [%s%3$s] \u00e0 l'ennemi pendant %s seconds",
+    "calamity.generator.output.effect.level2": " II",
+    "calamity.generator.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
+    "calamity.generator.output.item": "Don de [%s] * %s",
+    "calamity.generator.sign.activated": "Activ\u00e9 !",
+    "calamity.generator.sign.attack": "%s sec. attaque",
+    "calamity.generator.sign.enchant": "Pour la main principale",
+    "calamity.generator.sign.perPlayer": "%s par joueur",
+    "calamity.generator.sign.perTeam": "%s sec. pour l'\u00e9quipe",
+    "calamity.generator.sign.progress": "Chargement: %s%%",
+    "calamity.generator.sign.ready": "Pr\u00eat",
+    "calamity.generator.sign.resetting": "R\u00e9initialisation: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "Chargement: %s seconde restante",
+    "calamity.generator.statusMessage.chargeSeconds": "Chargement: %s secondes restantes",
+    "calamity.generator.statusMessage.resettingSecond": "R\u00e9initialisation: %s seconde restante",
+    "calamity.generator.statusMessage.resettingSeconds": "R\u00e9initialisation: %s secondes restantes",
     "calamity.seekGlory": "Rejoins la gloire ou tombe dans la calamit\u00e9 !",
     "calamity.sidelines": "%s a rejoins les gradins",
     "calamity.startMatch.last5seconds": "%s...",
