--- a/resourcepacks/calamity/assets/calamity/lang/sv_se.json
+++ b/resourcepacks/calamity/assets/calamity/lang/sv_se.json
@@ -66,19 +66,19 @@
     "calamity.resetItems.haventChosen": "Inget att \u00e5terst\u00e4lla. Du har \u00e4nnu inte valt n\u00e5got f\u00f6rem\u00e5l.",
     "calamity.resetItems": "Du f\u00e5r kommer att f\u00e5 v\u00e4lja ett nytt f\u00f6rem\u00e5l vid n\u00e4sta respawn-tillf\u00e4lle.",
     "calamity.resetting": "\u00c5terst\u00e4ller till standardl\u00e4ge",
-    "calamity.resourcePoint.output.attackEffect": "Skickade motst\u00e5ndare [%s%3$s] i %s sekunder",
-    "calamity.resourcePoint.sign.activated": "Aktiverat!",
-    "calamity.resourcePoint.sign.enchant": "F\u00f6r huvudgrepp",
-    "calamity.resourcePoint.sign.perPlayer": "%s per spelare",
-    "calamity.resourcePoint.sign.perTeam": "%s sec. till laget",
-    "calamity.resourcePoint.sign.progress": "Laddar: %s%%",
-    "calamity.resourcePoint.sign.ready": "Redo",
-    "calamity.resourcePoint.sign.resetting": "\u00c5terst\u00e4ller: %s%%",
-    "calamity.resourcePoint.sign.type": "[%s%s]",
-    "calamity.resourcePoint.statusMessage.chargeSecond": "Laddar: %s sekund kvar",
-    "calamity.resourcePoint.statusMessage.chargeSeconds": "Laddar: %s sekunder kvar",
-    "calamity.resourcePoint.statusMessage.resettingSecond": "\u00c5terst\u00e4ller: %s sekund kvar",
-    "calamity.resourcePoint.statusMessage.resettingSeconds": "\u00c5terst\u00e4ller: %s sekunder kvar",
+    "calamity.generator.output.attackEffect": "Skickade motst\u00e5ndare [%s%3$s] i %s sekunder",
+    "calamity.generator.sign.activated": "Aktiverat!",
+    "calamity.generator.sign.enchant": "F\u00f6r huvudgrepp",
+    "calamity.generator.sign.perPlayer": "%s per spelare",
+    "calamity.generator.sign.perTeam": "%s sec. till laget",
+    "calamity.generator.sign.progress": "Laddar: %s%%",
+    "calamity.generator.sign.ready": "Redo",
+    "calamity.generator.sign.resetting": "\u00c5terst\u00e4ller: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "Laddar: %s sekund kvar",
+    "calamity.generator.statusMessage.chargeSeconds": "Laddar: %s sekunder kvar",
+    "calamity.generator.statusMessage.resettingSecond": "\u00c5terst\u00e4ller: %s sekund kvar",
+    "calamity.generator.statusMessage.resettingSeconds": "\u00c5terst\u00e4ller: %s sekunder kvar",
     "calamity.sidelines": "%s f\u00f6rflyttades till sidlinjen",
     "calamity.startMatch.last5seconds": "%s...",
     "calamity.startMatch.oneSecond": "Matchen \u25b6 b\u00f6rjar om %s sekund",
