Resolves #63: Points messages now get cooler

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -65,7 +65,8 @@
 	"calamity.out.of.bounds": "Out of bounds!",
 	"calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
 	"calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
-	"calamity.points": "%s: +%s points",
+	"calamity.points": "+%s points",
+	"spacer.colon": "%s: %s",
 	"calamity.prestige.blueForfeit.blue": "You've kept your dignity",
 	"calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
 	"calamity.prestige.lost": "Lost by %s points",
